Bucked added when save images

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,9 @@ GCP_REGION=us-central1
 GCP_ZONE=us-central1-a
 GCP_SERVICE_ACCOUNT_KEY=path_to_service_account_key.json
 
+# Google Cloud Storage (for image uploads)
+GCS_BUCKET_NAME=ioio-products
+
 # Email Configuration (optional, for order notifications)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
