--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "uuid": "^9.0.1",
     "joi": "^17.11.0",
     "mercadopago": "^2.0.6",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "@google-cloud/storage": "^7.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
