--- a/backend/package.json
+++ b/backend/package.json
@@ -8,24 +8,28 @@
     "dev": "nodemon src/index.js",
     "db:setup": "node src/infrastructure/database/setup.js"
   },
-  "keywords": ["ecommerce", "hexagonal", "api"],
+  "keywords": [
+    "ecommerce",
+    "hexagonal",
+    "api"
+  ],
   "author": "IOIO",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
+    "@google-cloud/storage": "^7.18.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.1",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mercadopago": "^2.0.6",
-    "axios": "^1.6.2",
-    "@google-cloud/storage": "^7.7.0"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
